# ticket-triage

./: .env.example  .gitignore  docker-compose.yml  eda.ipynb  pyproject.toml
scripts/: apply_sql.py  inspect_raw_csv.py  load_raw_complaints.py
sql/: 001_raw_complaints_schema.sql  002_raw_complaints_indexes.sql  003_narrative_consented_view.sql  004_priority_label_view.sql  005_product_stratified_sample.sql
src/ticket_triage/: __init__.py  features.py
tests/: test_leakage.py
